--- a/src/scss/bannerMessages.scss
+++ b/src/scss/bannerMessages.scss
@@ -14,12 +14,67 @@ $color-white-alpha-9: rgba(255, 255, 255, .9);
   border-radius: 0;
   margin: 0;
 
+  h1, h2, h3, h4, h5, h6 {
+    color: $color-white;
+  }
+  &.alert {
+    position: relative;
+    padding: .75rem 1.25rem;
+    border: 1px solid transparent;
+  }
+  .container {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    position:relative;
+  }
+
+  .close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: .75rem 1.25rem;
+    color: inherit;
+    background: 0 0;
+    border: 0;
+    float: right;
+    font-size: 1.5rem;
+    font-weight: 700;
+    line-height: 1;
+    text-shadow: 0 1px 0 #fff;
+    opacity: .5;
+    margin: 0;
+    font-family: inherit;
+    border-radius: 0;
+    text-transform: none;
+    overflow: visible;
+  }
+
+
+
   .btn-outline-primary {
     color: $color-white;
-    border-color: $color-white;
+    border: 1px solid $color-white;
+    background-image: none;
+    padding: .25rem .5rem;
+    font-size: .875rem;
+    line-height: 1.5;
+    border-radius: .2rem;
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    transition: background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 
     &:hover {
       background-color: $color-white;
+      text-decoration: none;
     }
   }
 
@@ -54,6 +109,22 @@ $color-white-alpha-9: rgba(255, 255, 255, .9);
       color: $color-white;
       text-decoration: none;
       border-bottom: none;
+    }
+  }
+
+  @media (min-width: 768px) {
+    .container {
+      width: 750px;
+    }
+  }
+  @media (min-width: 992px) {
+    .container {
+      width: 970px;
+    }
+  }
+  @media (min-width: 1200px) {
+    .container {
+      width: 1170px;
     }
   }
 }
