--- a/src/scss/bannerMessages.scss
+++ b/src/scss/bannerMessages.scss
@@ -14,7 +14,7 @@ $color-white-alpha-9: rgba(255, 255, 255, .9);
   border-radius: 0;
   margin: 0;
 
-  h1, h2, h3, h4, h5, h6 {
+  h1, h2, h3, h4, h5, h6, p {
     color: $color-white;
   }
   &.alert {
